using csrf token from page but not cookie

--- a/tbd/static/tbd/css/user_style.css
+++ b/tbd/static/tbd/css/user_style.css
@@ -7,6 +7,10 @@
         width: 600px;
     }
     
+    .hidden {
+        display:none;
+    }
+    
     div.filtering {
         margin-bottom: 5px;
         border: 1px solid #999;
