--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -16,6 +16,9 @@
     </head>
     
     <body>
+        <div class="hidden">
+            <input type="hidden" id="csrfmiddlewaretoken" value="{{ csrf_token }}">
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
